# Recipie-server

./: CHOICES.js  LICENSE  README.md  pyproject.toml  requirements.txt  schema.graphql
.github/ISSUE_TEMPLATE/: config.yml
backend/: graphql.py  settings.py
backend/contrib/: apps.py
backend/contrib/management/commands/: choices_export.py
backend/core/: choices.py  models.py  mutations.py  node.py  queries.py  storage.py  types.py
backend/core/migrations/: 0001_initial.py
